# kevin

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
api test/: TRUNCATE TABLE brawlers RESTART IDENTITY.pgsql  brawler-test.http  crew-test.http  misson-test.http
client/: angular.json  package-lock.json  package.json
client/src/: styles.scss
client/src/app/: app.html  app.routes.ts  app.scss  app.ts
client/src/app/navbar/: navbar.html  navbar.scss  navbar.ts
client/src/environments/: environment.development.ts  environment.ts
src/: lib.rs  main.rs
src/application/use_cases/: authentication.rs  brawlers.rs  crew_operation.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs  mod.rs
src/config/: config_loader.rs  config_model.rs  stage.rs
src/domain/: mod.rs
src/domain/entities/: brawlers.rs  crew_memberships.rs  missions.rs  mod.rs
src/domain/repositories/: brawlers.rs  crew_operation.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs
src/domain/value_objects/: brawler_model.rs  mission_model.rs  mission_statuses.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/argon2/: mod.rs
src/infrastructure/database/: mod.rs  postgresql_connection.rs
src/infrastructure/database/repositories/: brawlers.rs  crew_operation.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs  mod.rs
src/infrastructure/http/: http_serv.rs  mod.rs
src/infrastructure/http/middleware/: auth.rs
src/infrastructure/http/routers/: authentication.rs  brawers.rs  (+4 more)
src/infrastructure/jwt/: jwt_model.rs  mod.rs
(+4 files in other folders)
