[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.6"
axum-extra = "0.12.1"
chrono = "0.4.42"
cookie = "0.18.1"
diesel = "2.3.3"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
