[package]
name = "pochinki"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["password-hash"] }
async-trait = "0.1.89"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
cookie = "0.18.1"
diesel = { version = "2.3.4", features = ["postgres", "serde_json", "chrono", "r2d2"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
mockall = "0.14.0"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # แนะนำให้เพิ่มหากคุณจะใช้ JSON
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
